force-app/main/default/objects/B2B_Buyer_Info__mdt/B2B_Buyer_Info__mdt.object-meta.xml
<CustomObject>
    <label>B2B Buyer Info</label>
    <pluralLabel>B2B Buyer Infos</pluralLabel>
</CustomObject>