force-app/main/default/objects/B2B_Buyer_Info__mdt/fields/Buyer_Manager_Profile__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Manager_Profile__c</fullName>
    <label>Buyer Manager Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>