force-app/main/default/objects/B2B_Buyer_Info__mdt/fields/Buyer_Permission_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Permission_Set_Name__c</fullName>
    <label>Buyer Permission Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>