force-app/main/default/objects/B2B_Buyer_Info__mdt/fields/Profiles__c.field-meta.xml
<CustomField>
    <fullName>Profiles__c</fullName>
    <description>Relevant user profiles to assign permission sets out to</description>
    <inlineHelpText>Enter each profile name separated by a comma &quot;,&quot;</inlineHelpText>
    <label>Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>